--- a/mluilias.css
+++ b/mluilias.css
@@ -911,6 +911,25 @@ td.ilFormHeader, td.ilFormFooter {
 	width: 100%
 }
 
+/* Generic Caret */
+.caret {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	vertical-align: top;
+	margin-top: 8px;
+	margin-left: 2px;
+	border-top:   5px solid #000;
+	border-right: 5px solid transparent;
+	border-left:  5px solid transparent;
+	content: "";
+	-moz-opacity: 0.5;
+	-khtml-opacity: 0.5;
+	opacity: 0.5;
+	filter: alpha(opacity=50);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+}
+
 /* Section Heading */
 
 div.il_HeaderInner {
